[gd_scene load_steps=10 format=3 uid="uid://nxcul3mfumb7"]

[ext_resource type="PackedScene" uid="uid://bmpopsk75n4pn" path="res://player.tscn" id="1_ki24f"]
[ext_resource type="Script" path="res://game.gd" id="1_wvcjb"]
[ext_resource type="PackedScene" uid="uid://rqpcme5v2oca" path="res://pine_tree.tscn" id="2_auc2b"]
[ext_resource type="PackedScene" uid="uid://kqb656ejswjf" path="res://wall.tscn" id="3_6wt5h"]
[ext_resource type="PackedScene" uid="uid://c238tdq0lhcl8" path="res://in_game_ux.tscn" id="4_8faun"]
[ext_resource type="PackedScene" uid="uid://ddclddyrk2v3h" path="res://item_template.tscn" id="4_ndlos"]
[ext_resource type="PackedScene" uid="uid://sx8cwas3voub" path="res://paused_screen.tscn" id="5_88t8x"]

[sub_resource type="Curve2D" id="Curve2D_qpewy"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 2084, -211, 0, 0, 0, 0, 2090, 1298, 0, 0, 0, 0, -308, 1313, 0, 0, 0, 0, -308, -209, 0, 0, 0, 0, 2084, -211)
}
point_count = 5

[sub_resource type="GDScript" id="GDScript_uihhk"]
script/source = "extends Node


func _on_reset_level():
	for enemy in get_children():
		remove_child(enemy)
		enemy.queue_free()
"

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_wvcjb")

[node name="SandboxLevel" type="Node2D" parent="."]
unique_name_in_owner = true
y_sort_enabled = true

[node name="BackgroundLayer" type="CanvasLayer" parent="SandboxLevel"]
layer = -1

[node name="BackgroundColour" type="ColorRect" parent="SandboxLevel/BackgroundLayer"]
offset_right = 1920.0
offset_bottom = 1080.0

[node name="Player" parent="SandboxLevel" instance=ExtResource("1_ki24f")]
unique_name_in_owner = true
position = Vector2(840, 564)

[node name="SpawnPath" type="Path2D" parent="SandboxLevel/Player"]
position = Vector2(-840, -564)
curve = SubResource("Curve2D_qpewy")

[node name="SpawnPathFollower" type="PathFollow2D" parent="SandboxLevel/Player/SpawnPath"]
unique_name_in_owner = true
position = Vector2(2084, -211)
rotation = 1.56682

[node name="Walls" type="Node2D" parent="SandboxLevel"]

[node name="Wall" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(0, -211)

[node name="Wall19" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(0, -83)

[node name="Wall20" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(0, 45)

[node name="Wall21" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(0, 173)

[node name="Wall22" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(0, 301)

[node name="Wall23" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(0, 429)

[node name="Wall24" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(0, 557)

[node name="Wall25" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(-97, 557)

[node name="Wall26" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(-97, 685)

[node name="Wall27" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(-97, 813)

[node name="Wall28" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(-191, 813)

[node name="Wall29" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(-191, 941)

[node name="Wall30" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(-173, 1069)

[node name="Wall31" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(-173, 1197)

[node name="Wall32" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(-270, 1197)

[node name="Wall33" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(-270, 1325)

[node name="Wall34" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(-270, 1453)

[node name="Wall35" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(-364, 1453)

[node name="Wall36" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(-364, 1581)

[node name="Wall2" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(96, -211)

[node name="Wall51" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(3085, -212)

[node name="Wall52" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(3085, -83)

[node name="Wall53" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(3085, 45)

[node name="Wall54" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(3085, 173)

[node name="Wall55" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(3085, 301)

[node name="Wall56" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(3085, 429)

[node name="Wall57" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(3085, 557)

[node name="Wall58" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(2988, 557)

[node name="Wall59" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(2988, 685)

[node name="Wall60" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(2988, 813)

[node name="Wall61" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(2894, 813)

[node name="Wall62" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(2894, 941)

[node name="Wall3" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(192, -211)

[node name="Wall4" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(288, -211)

[node name="Wall5" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(384, -211)

[node name="Wall6" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(480, -211)

[node name="Wall7" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(576, -211)

[node name="Wall8" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(672, -211)

[node name="Wall9" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(768, -211)

[node name="Wall10" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(864, -211)

[node name="Wall38" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(-364, 1710)

[node name="Wall39" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(-268, 1710)

[node name="Wall40" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(-172, 1710)

[node name="Wall41" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(-76, 1710)

[node name="Wall42" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(20, 1710)

[node name="Wall43" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(116, 1710)

[node name="Wall44" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(212, 1710)

[node name="Wall45" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(308, 1710)

[node name="Wall46" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(404, 1710)

[node name="Wall47" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(500, 1710)

[node name="Wall48" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(596, 1710)

[node name="Wall83" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(693, 1710)

[node name="Wall84" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(789, 1710)

[node name="Wall85" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(885, 1710)

[node name="Wall86" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(981, 1710)

[node name="Wall87" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(1077, 1710)

[node name="Wall88" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(1173, 1710)

[node name="Wall89" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(1269, 1710)

[node name="Wall90" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(1365, 1710)

[node name="Wall91" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(1461, 1710)

[node name="Wall92" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(1557, 1710)

[node name="Wall93" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(1653, 1710)

[node name="Wall94" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(1749, 1710)

[node name="Wall95" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(1845, 1710)

[node name="Wall96" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(1941, 1710)

[node name="Wall97" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(2037, 1710)

[node name="Wall98" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(2133, 1710)

[node name="Wall99" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(2229, 1710)

[node name="Wall100" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(2325, 1710)

[node name="Wall101" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(2421, 1710)

[node name="Wall49" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(2798, 1070)

[node name="Wall50" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(2894, 1070)

[node name="Wall102" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(2803, 1198)

[node name="Wall103" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(2706, 1198)

[node name="Wall104" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(2706, 1326)

[node name="Wall105" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(2706, 1454)

[node name="Wall106" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(2612, 1454)

[node name="Wall107" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(2612, 1582)

[node name="Wall108" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(2516, 1711)

[node name="Wall109" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(2612, 1711)

[node name="Wall11" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(864, -340)

[node name="Wall12" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(960, -340)

[node name="Wall13" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(1056, -340)

[node name="Wall14" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(1152, -340)

[node name="Wall15" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(1152, -468)

[node name="Wall16" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(1248, -468)

[node name="Wall17" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(1344, -468)

[node name="Wall18" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(1440, -468)

[node name="Wall64" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(1435, -340)

[node name="Wall65" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(1531, -340)

[node name="Wall66" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(1627, -340)

[node name="Wall67" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(1723, -340)

[node name="Wall68" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(1825, -340)

[node name="Wall69" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(1921, -340)

[node name="Wall63" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(2017, -340)

[node name="Wall70" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(2113, -340)

[node name="Wall71" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(2209, -340)

[node name="Wall72" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(2305, -340)

[node name="Wall73" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(2305, -468)

[node name="Wall74" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(2401, -468)

[node name="Wall75" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(2497, -468)

[node name="Wall76" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(2593, -468)

[node name="Wall77" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(2588, -340)

[node name="Wall78" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(2684, -340)

[node name="Wall79" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(2780, -340)

[node name="Wall80" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(2876, -340)

[node name="Wall81" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(2978, -340)

[node name="Wall82" parent="SandboxLevel/Walls" instance=ExtResource("3_6wt5h")]
position = Vector2(3074, -340)

[node name="PineTree" parent="SandboxLevel" instance=ExtResource("2_auc2b")]
position = Vector2(422, 305)

[node name="PineTree2" parent="SandboxLevel" instance=ExtResource("2_auc2b")]
position = Vector2(785, 394)

[node name="PineTree3" parent="SandboxLevel" instance=ExtResource("2_auc2b")]
position = Vector2(829, 836)

[node name="PineTree4" parent="SandboxLevel" instance=ExtResource("2_auc2b")]
position = Vector2(1081, 543)

[node name="PineTree5" parent="SandboxLevel" instance=ExtResource("2_auc2b")]
position = Vector2(654, 731)

[node name="PineTree6" parent="SandboxLevel" instance=ExtResource("2_auc2b")]
position = Vector2(383, 736)

[node name="PineTree7" parent="SandboxLevel" instance=ExtResource("2_auc2b")]
position = Vector2(1500, 726)

[node name="ItemTemplate" parent="SandboxLevel" instance=ExtResource("4_ndlos")]
position = Vector2(275, 522)

[node name="EnemySpawnTimer" type="Timer" parent="SandboxLevel"]
wait_time = 0.3
autostart = true

[node name="Enemies" type="Node2D" parent="SandboxLevel"]
unique_name_in_owner = true
script = SubResource("GDScript_uihhk")

[node name="InGameUX" parent="SandboxLevel" instance=ExtResource("4_8faun")]

[node name="ItemTimer" type="Timer" parent="SandboxLevel"]
wait_time = 10.0
autostart = true

[node name="Items" type="Node" parent="SandboxLevel"]
unique_name_in_owner = true

[node name="GameOverScreen" type="CanvasLayer" parent="."]
unique_name_in_owner = true
process_mode = 3
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOverScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.701961)

[node name="Game Over label" type="Label" parent="GameOverScreen/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = -11.5
offset_right = 43.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 152
text = "Game Over"

[node name="Restart Game" type="Button" parent="GameOverScreen"]
process_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -169.0
offset_top = 98.0
offset_right = 169.0
offset_bottom = 177.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Restart game"

[node name="PausedScreen" parent="." instance=ExtResource("5_88t8x")]
unique_name_in_owner = true
visible = false

[connection signal="health_depleted" from="SandboxLevel/Player" to="." method="_on_player_health_depleted"]
[connection signal="score_change" from="SandboxLevel/Player" to="SandboxLevel/InGameUX" method="_on_player_score_change"]
[connection signal="timeout" from="SandboxLevel/EnemySpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="SandboxLevel/ItemTimer" to="." method="_on_item_spawn_timer_timeout"]
[connection signal="pressed" from="GameOverScreen/Restart Game" to="." method="_on_reset_game_clicked"]
